more work on connect page, fixed navbar spacing and added animation

--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -12,7 +12,6 @@ ul.navigation{
 
     &:hover, &.active{
       background: $persimmon;
-      text-decoration: underline;
       cursor: pointer;
     }
 
@@ -33,7 +32,31 @@ ul.navigation{
 
   img{
     width: 200%;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
 
+    &:hover{
+      -webkit-transform: scale(.95);
+      transform: scale(.95);
+    }
+  }
+}
 
+.contactBar{
+  background: $heirloom-rose;
+  height: 30px;
+  text-align: center;
+  font-size: 25px;
+
+  i{
+    padding: 2px 10px;
+    color: $cream;
+
+    &:hover, &:active{
+      cursor: pointer;
+      color: $twilight;
+    }
   }
 }
